--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
         </header>
         <article>
             <h2>Artigo 001</h2>
-            <p>Texto Artigo 001</p>
+            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Impedit placeat maxime ex natus quam alias nam ipsa dicta. Debitis cupiditate voluptas consectetur illo iusto, ab modi itaque voluptates numquam eaque.</p>
         </article>
         <article>
             <h2>Artigo 002</h2>
-            <p>Texto do Artigo 002</p>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur architecto illo obcaecati maiores itaque optio ex harum quae doloribus enim animi voluptas, hic necessitatibus doloremque minima veritatis tempore molestias totam.</p>
         </article>
     </main>
 </body>
